[package]
name = "butte-test"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = { package = "butte-flatbuffers", path = "../butte/butte-flatbuffers" }
bytes = "0.4.12"